--- a/src/report/ReportDV.jrxml
+++ b/src/report/ReportDV.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9a304fbc-44e7-4344-9ef2-b8cae314b976">
-	<property name="ireport.zoom" value="1.331000000000009"/>
+	<property name="ireport.zoom" value="1.2418426461183119"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="datefrom" class="java.lang.String">
@@ -16,12 +16,22 @@
 	<parameter name="email" class="java.lang.String"/>
 	<parameter name="phone" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[SELECT * FROM tbldisbursementvoucher WHERE Date BETWEEN $P{datefrom} AND $P{dateto};]]>
+		<![CDATA[SELECT * FROM tbldisbursementvoucherparticular INNER JOIN  
+tbldisbursementvoucher ON tbldisbursementvoucherparticular.DisbursementCode = tbldisbursementvoucher.DisbursementCode WHERE Date BETWEEN $P{datefrom} AND $P{dateto};]]>
 	</queryString>
 	<field name="ID" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="DisbursementCode" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Code" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Account" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="Amount" class="java.math.BigDecimal">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="ChargeTo" class="java.lang.String">
@@ -57,137 +67,130 @@
 				<reportElement x="-1" y="44" width="803" height="1" uuid="b3a4f7d2-142a-400e-81ed-5570cbab07cf"/>
 			</line>
 			<staticText>
-				<reportElement x="265" y="48" width="266" height="17" uuid="b6965780-a766-4794-9a12-eef3f10a00b3"/>
+				<reportElement x="0" y="50" width="802" height="17" uuid="b6965780-a766-4794-9a12-eef3f10a00b3"/>
 				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DISBURSEMENT VOUCHER REPORT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="70" width="51" height="12" uuid="8a4fedeb-97af-494a-a87f-3f246af9598a"/>
+				<reportElement x="2" y="82" width="62" height="12" uuid="8a4fedeb-97af-494a-a87f-3f246af9598a"/>
 				<textElement>
 					<font fontName="Cambria" size="10" isBold="false"/>
 				</textElement>
-				<text><![CDATA[TOTAL	:]]></text>
+				<text><![CDATA[Total	:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="3" y="94" width="48" height="12" uuid="82c4cf54-dfac-4f04-bd8b-d477de9ec1ea"/>
+				<reportElement x="2" y="93" width="62" height="12" uuid="409cbc0a-b4d1-4185-bda6-1ce721f36226"/>
 				<textElement>
 					<font fontName="Cambria" size="10" isBold="false"/>
 				</textElement>
-				<text><![CDATA[TO 	:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="3" y="82" width="48" height="12" uuid="409cbc0a-b4d1-4185-bda6-1ce721f36226"/>
-				<textElement>
-					<font fontName="Cambria" size="10" isBold="false"/>
-				</textElement>
-				<text><![CDATA[FROM	:]]></text>
+				<text><![CDATA[Date Range:]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="109" width="801" height="1" uuid="4b705d0e-3a1f-49ea-ae26-266a7973cf6f"/>
 			</line>
 			<textField>
-				<reportElement x="51" y="82" width="86" height="12" uuid="60315950-3819-488e-a47f-c4d58620ded8"/>
+				<reportElement x="64" y="93" width="155" height="12" uuid="60315950-3819-488e-a47f-c4d58620ded8"/>
 				<textElement>
 					<font fontName="Cambria" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{datefrom}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{datefrom} +" to "+ $P{dateto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="51" y="94" width="86" height="12" uuid="7eb40901-5799-43bb-b6ea-948c216a81cf"/>
-				<textElement>
-					<font fontName="Cambria" isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{dateto}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="51" y="70" width="129" height="12" uuid="40f045ad-3877-4dc6-af72-19f83acfdff8"/>
+				<reportElement x="64" y="82" width="155" height="12" uuid="40f045ad-3877-4dc6-af72-19f83acfdff8"/>
 				<textElement>
 					<font fontName="Cambria" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="2" y="-1" width="46" height="42" uuid="f8a1004e-7988-491d-8b43-95a6363a12da"/>
+				<reportElement x="0" y="0" width="46" height="42" uuid="f8a1004e-7988-491d-8b43-95a6363a12da"/>
 				<imageExpression><![CDATA["C:\\Program Files\\Extrace\\logo-64.png"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="50" y="32" width="398" height="13" uuid="32201327-35d1-47f9-ba07-fdeba00b00ab"/>
-				<textElement>
+				<reportElement x="0" y="32" width="802" height="13" uuid="32201327-35d1-47f9-ba07-fdeba00b00ab"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{email} +" | "+ $P{phone}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="50" y="-1" width="398" height="24" uuid="e02df195-7f96-49b7-ad7b-e9965e84fd99"/>
-				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
+				<reportElement x="0" y="-1" width="802" height="24" uuid="e02df195-7f96-49b7-ad7b-e9965e84fd99"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
 					<font fontName="Cambria" size="20" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{company}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="50" y="22" width="398" height="13" uuid="39928e2a-e3a9-478f-a361-05b2a7145f37"/>
-				<textElement>
+				<reportElement x="0" y="22" width="802" height="13" uuid="39928e2a-e3a9-478f-a361-05b2a7145f37"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{address} +" | TIN "+ $P{tin}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="66" width="802" height="17" uuid="f0cada39-f506-43fb-bea9-f27f2cee2311"/>
+				<textElement textAlignment="Center">
+					<font fontName="Cambria" size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[BY DATE]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="15" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="345" y="0" width="125" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="ef0bb75b-7936-4427-ad01-c7ed85b10a0e"/>
+				<reportElement mode="Opaque" x="394" y="0" width="143" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="ef0bb75b-7936-4427-ad01-c7ed85b10a0e"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[DESCRIPTION]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="-1" y="0" width="75" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="c89ce780-d321-431b-8d3d-de51e87a8fca"/>
+				<reportElement mode="Opaque" x="0" y="0" width="64" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="c89ce780-d321-431b-8d3d-de51e87a8fca"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[DV CODE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="694" y="0" width="107" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="8c6c3587-6a40-4956-a673-8cddf974b738"/>
+				<reportElement mode="Opaque" x="726" y="0" width="76" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="8c6c3587-6a40-4956-a673-8cddf974b738"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[TOTAL AMOUNT]]></text>
+				<text><![CDATA[AMOUNT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="74" y="0" width="98" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="61586d5a-730a-44b3-bde1-a19f85ca8b4e"/>
+				<reportElement mode="Opaque" x="64" y="0" width="139" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="61586d5a-730a-44b3-bde1-a19f85ca8b4e"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[CHARGE TO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="269" y="0" width="76" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="6c13f98b-c612-4de2-ad7e-d2d5a1fb0406"/>
+				<reportElement mode="Opaque" x="328" y="0" width="66" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="6c13f98b-c612-4de2-ad7e-d2d5a1fb0406"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[TIN]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="172" y="0" width="97" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="13de02bc-3b1d-4f70-8cff-9025caa815e3"/>
+				<reportElement mode="Opaque" x="203" y="0" width="125" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="13de02bc-3b1d-4f70-8cff-9025caa815e3"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[PAYEE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="470" y="0" width="114" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="fc3f59de-b7ff-495b-a6e5-b718b42c7852"/>
+				<reportElement mode="Opaque" x="605" y="0" width="121" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="fc3f59de-b7ff-495b-a6e5-b718b42c7852"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<text><![CDATA[FUND SOURCE]]></text>
+				<text><![CDATA[Account]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="584" y="0" width="110" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="239b398e-73e7-4bb3-b3f4-8bff7e5e5d48"/>
+				<reportElement mode="Opaque" x="537" y="0" width="68" height="14" forecolor="#FFFFFF" backcolor="#FF9900" uuid="239b398e-73e7-4bb3-b3f4-8bff7e5e5d48"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
@@ -198,60 +201,60 @@
 	<detail>
 		<band height="12" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="74" height="12" uuid="ab92dc50-e1c3-4b4a-8a59-063af3d3732c"/>
+				<reportElement x="0" y="0" width="64" height="12" uuid="ab92dc50-e1c3-4b4a-8a59-063af3d3732c"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DisbursementCode}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="74" y="0" width="98" height="12" uuid="d108367a-3d9c-435e-8310-e2ee8724d805"/>
+				<reportElement x="64" y="0" width="139" height="12" uuid="d108367a-3d9c-435e-8310-e2ee8724d805"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ChargeTo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="172" y="0" width="97" height="12" uuid="96ae0352-0a4f-4cee-8291-7a160154d7c3"/>
+				<reportElement x="203" y="0" width="125" height="12" uuid="96ae0352-0a4f-4cee-8291-7a160154d7c3"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Payee}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="269" y="0" width="76" height="12" uuid="58f734c5-20b3-4a5d-88ac-071b0c6a405d"/>
+				<reportElement x="328" y="0" width="66" height="12" uuid="58f734c5-20b3-4a5d-88ac-071b0c6a405d"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{TINNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="345" y="0" width="125" height="12" uuid="f2ff297e-561d-403a-a932-c4db347938be"/>
+				<reportElement x="394" y="0" width="143" height="12" uuid="f2ff297e-561d-403a-a932-c4db347938be"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Description}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="470" y="0" width="114" height="12" uuid="ae1f206e-8dd8-44d8-bb8c-3756724e2520"/>
-				<textElement>
-					<font size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{FundSource}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="584" y="0" width="110" height="12" uuid="20e77cf9-322e-4283-a0f5-6f9160f7d5fe"/>
+				<reportElement x="537" y="0" width="68" height="12" uuid="20e77cf9-322e-4283-a0f5-6f9160f7d5fe"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{CheckNo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="694" y="0" width="107" height="12" uuid="10939289-598b-473a-98e6-a0a66a7bb1e6"/>
+				<reportElement x="605" y="0" width="121" height="12" uuid="6134c16b-c17c-4459-a8a8-aba3cfcf3517"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TotalAmount}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Account}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="726" y="0" width="76" height="12" uuid="8e104cc9-8b19-4789-b9c1-6de4ef62c08d"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{Amount}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -272,7 +275,7 @@
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="763" y="5" width="38" height="17" uuid="1c190d26-1ee0-4192-b4b7-8d44067dc7cc"/>
+				<reportElement x="763" y="5" width="39" height="17" uuid="1c190d26-1ee0-4192-b4b7-8d44067dc7cc"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Cambria" isBold="false"/>
 				</textElement>
