--- a/src/report/ReportJournalEntryCompany.jrxml
+++ b/src/report/ReportJournalEntryCompany.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0be925d6-21b7-4bfd-a087-b9b843febca2">
-	<property name="ireport.zoom" value="1.771561000000011"/>
+	<property name="ireport.zoom" value="1.3310000000000084"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="company" class="java.lang.String">
@@ -62,22 +62,22 @@
 				<imageExpression><![CDATA["C:\\Program Files\\Extrace\\logo-64.png"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="43" y="0" width="398" height="24" uuid="b0491512-9085-4494-9994-883d1b7603e1"/>
-				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
+				<reportElement x="0" y="0" width="555" height="24" uuid="b0491512-9085-4494-9994-883d1b7603e1"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
 					<font fontName="Cambria" size="20" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{companyname}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="43" y="23" width="398" height="13" uuid="27b90109-abf4-49b6-ba5a-c72db49ab40e"/>
-				<textElement>
+				<reportElement x="0" y="23" width="555" height="13" uuid="27b90109-abf4-49b6-ba5a-c72db49ab40e"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{address} +" | TIN "+ $P{tin}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="43" y="33" width="398" height="13" uuid="a95a021a-dac6-4306-bc42-68579cec1d57"/>
-				<textElement>
+				<reportElement x="0" y="33" width="555" height="13" uuid="a95a021a-dac6-4306-bc42-68579cec1d57"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{email} +" | "+ $P{phone}]]></textFieldExpression>
@@ -85,97 +85,93 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="67" splitType="Stretch">
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="53" width="60" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="bb1e46b4-23b0-4ec2-bb7a-3de8f0adc18c"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DATE]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="164" y="53" width="197" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="3073fe27-566a-4a52-9594-679a519294a7"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[ACCOUNT]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="60" y="53" width="56" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="12075301-f703-4075-b6e9-eeab7479fafd"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[REF]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="117" y="53" width="46" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="57433c39-7f21-4849-beab-fff0ed62e516"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[CODE]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="458" y="53" width="97" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="cd26f84e-b12e-4ba4-a72f-327ffed73ec5"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[CREDIT]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="361" y="53" width="97" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="cf7014d6-0e68-4092-b13c-f9f93b7b5c84"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DEBIT]]></text>
-			</staticText>
+		<band height="82" splitType="Stretch">
 			<textField>
-				<reportElement x="87" y="10" width="241" height="13" uuid="e2d68d9d-14e9-4254-b207-717c652c6540"/>
+				<reportElement x="60" y="39" width="268" height="13" uuid="e2d68d9d-14e9-4254-b207-717c652c6540"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{company}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="87" y="23" width="132" height="13" uuid="d5b8af64-ee25-4559-9908-3c6f7bdc90cf"/>
+				<reportElement x="60" y="51" width="268" height="13" uuid="d5b8af64-ee25-4559-9908-3c6f7bdc90cf"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{datefrom}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="87" y="36" width="132" height="13" uuid="84d9956b-b791-4d73-89a8-6e9b63139caa"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{dateto}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{datefrom} +" to "+ $P{dateto}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="10" width="87" height="13" uuid="c3726609-1666-4df7-b5f4-3111c0ea9930"/>
+				<reportElement x="0" y="39" width="60" height="13" uuid="c3726609-1666-4df7-b5f4-3111c0ea9930"/>
 				<textElement>
-					<font isBold="true"/>
+					<font isBold="false"/>
 				</textElement>
-				<text><![CDATA[COMPANY	:]]></text>
+				<text><![CDATA[Company:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="36" width="87" height="13" uuid="1d6ed56a-f463-44c7-8f8e-8cb48dc15fdb"/>
+				<reportElement x="0" y="51" width="60" height="13" uuid="3c20949e-b916-44ea-a2e4-94ca14849c46"/>
 				<textElement>
-					<font isBold="true"/>
+					<font isBold="false"/>
 				</textElement>
-				<text><![CDATA[TO		:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="0" y="23" width="87" height="13" uuid="3c20949e-b916-44ea-a2e4-94ca14849c46"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[FROM		:]]></text>
+				<text><![CDATA[Date Range:]]></text>
 			</staticText>
 			<line>
-				<reportElement x="0" y="51" width="555" height="1" uuid="6a6a59fd-7193-45fb-a777-847c48a2dde3"/>
+				<reportElement x="0" y="67" width="555" height="1" uuid="6a6a59fd-7193-45fb-a777-847c48a2dde3"/>
 			</line>
 			<staticText>
-				<reportElement x="237" y="1" width="86" height="13" uuid="dd0f6fe3-b96a-4853-a90f-98db501c3edf"/>
+				<reportElement x="0" y="3" width="555" height="21" uuid="dd0f6fe3-b96a-4853-a90f-98db501c3edf"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Cambria" size="14" isBold="true"/>
+				</textElement>
 				<text><![CDATA[JOURNAL ENTRY]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="395" y="69" width="80" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="fd1ee206-625a-4bb0-af62-71ce1eb249cb"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[DEBIT]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="165" y="69" width="65" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="6311e1e9-7f2e-4fc4-8226-1831f5a4956c"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[CODE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="0" y="69" width="55" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="e208fa04-7592-48de-842b-0c5bb74446f2"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[DATE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="230" y="69" width="165" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="84f8bbf9-303f-4fbd-b2dc-932c9277f143"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ACCOUNT]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="475" y="69" width="80" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="5cdae3c0-f6b6-4be3-91e4-5cccc9bb11a9"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[CREDIT]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="55" y="69" width="110" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="b162d24a-15d2-4653-a9fb-612c9024f228"/>
+				<textElement>
+					<font fontName="Cambria Math" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[REFERENCE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="23" width="555" height="17" uuid="6e4a8af7-af16-4280-8c9b-e356f37dc65a"/>
+				<textElement textAlignment="Center">
+					<font fontName="Cambria" size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[BY COMPANY]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -186,23 +182,23 @@
 				<textFieldExpression><![CDATA[$F{Date}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="60" y="0" width="56" height="14" uuid="b2f57e49-e1ea-4325-ae5e-0c52729e6bf6"/>
+				<reportElement x="55" y="0" width="110" height="14" uuid="b2f57e49-e1ea-4325-ae5e-0c52729e6bf6"/>
 				<textFieldExpression><![CDATA[$F{Reference}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="117" y="0" width="46" height="14" uuid="b6901f8a-970f-4733-bee6-4c3c508ea729"/>
+				<reportElement x="165" y="0" width="65" height="14" uuid="b6901f8a-970f-4733-bee6-4c3c508ea729"/>
 				<textFieldExpression><![CDATA[$F{Code}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="458" y="0" width="97" height="14" uuid="f022b846-bb83-4cef-8638-0d38e01b27f5"/>
+				<reportElement x="475" y="0" width="80" height="14" uuid="f022b846-bb83-4cef-8638-0d38e01b27f5"/>
 				<textFieldExpression><![CDATA[$F{Credit}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="164" y="0" width="197" height="14" uuid="526b77bc-399b-4dde-a187-dbeb86b91f46"/>
+				<reportElement x="230" y="0" width="165" height="14" uuid="526b77bc-399b-4dde-a187-dbeb86b91f46"/>
 				<textFieldExpression><![CDATA[$F{Account}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="361" y="0" width="97" height="14" uuid="1856f7f4-d5cf-4e8f-8d93-dfc8366620af"/>
+				<reportElement x="395" y="0" width="80" height="14" uuid="1856f7f4-d5cf-4e8f-8d93-dfc8366620af"/>
 				<textFieldExpression><![CDATA[$F{Debit}]]></textFieldExpression>
 			</textField>
 		</band>
