--- a/src/report/ReportTrialBalance.jrxml
+++ b/src/report/ReportTrialBalance.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0be925d6-21b7-4bfd-a087-b9b843febca2">
-	<property name="ireport.zoom" value="1.4641000000000082"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0be925d6-21b7-4bfd-a087-b9b843febca2">
+	<property name="ireport.zoom" value="1.1000000000000068"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="company" class="java.lang.String">
@@ -62,22 +62,22 @@
 				<imageExpression><![CDATA["C:\\Program Files\\Extrace\\logo-64.png"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="44" y="0" width="398" height="24" uuid="f1f01d93-d5a0-4640-8f70-ada4e9c8b24c"/>
-				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
+				<reportElement x="0" y="0" width="555" height="24" uuid="f1f01d93-d5a0-4640-8f70-ada4e9c8b24c"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None">
 					<font fontName="Cambria" size="20" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{company}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="44" y="23" width="398" height="13" uuid="319a6768-c010-4aef-a7af-6f8e3ba9b0ec"/>
-				<textElement>
+				<reportElement x="0" y="23" width="555" height="13" uuid="319a6768-c010-4aef-a7af-6f8e3ba9b0ec"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{address} +" | TIN "+ $P{tin}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="44" y="33" width="398" height="13" uuid="22321d37-b900-4a50-8498-94a0cc529dd6"/>
-				<textElement>
+				<reportElement x="0" y="33" width="555" height="13" uuid="22321d37-b900-4a50-8498-94a0cc529dd6"/>
+				<textElement textAlignment="Center">
 					<font fontName="Cambria" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{email} +" | "+ $P{phone}]]></textFieldExpression>
@@ -85,126 +85,49 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="67" splitType="Stretch">
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="53" width="60" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="bb1e46b4-23b0-4ec2-bb7a-3de8f0adc18c"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DATE]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="164" y="53" width="212" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="3073fe27-566a-4a52-9594-679a519294a7"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[ACCOUNT]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="60" y="53" width="56" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="12075301-f703-4075-b6e9-eeab7479fafd"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[REF]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="117" y="53" width="46" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="57433c39-7f21-4849-beab-fff0ed62e516"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[CODE]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="468" y="53" width="86" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="cd26f84e-b12e-4ba4-a72f-327ffed73ec5"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[CREDIT]]></text>
-			</staticText>
-			<staticText>
-				<reportElement mode="Opaque" x="376" y="53" width="92" height="13" forecolor="#FFFFFF" backcolor="#FF9900" uuid="cf7014d6-0e68-4092-b13c-f9f93b7b5c84"/>
-				<textElement>
-					<font fontName="Cambria Math" size="10" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DEBIT]]></text>
-			</staticText>
+		<band height="73" splitType="Stretch">
 			<textField>
-				<reportElement x="87" y="10" width="236" height="13" uuid="e2d68d9d-14e9-4254-b207-717c652c6540"/>
+				<reportElement x="87" y="39" width="159" height="13" uuid="e2d68d9d-14e9-4254-b207-717c652c6540"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{company}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="87" y="23" width="132" height="13" uuid="d5b8af64-ee25-4559-9908-3c6f7bdc90cf"/>
+				<reportElement x="87" y="52" width="159" height="13" uuid="d5b8af64-ee25-4559-9908-3c6f7bdc90cf"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{datefrom}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="87" y="36" width="132" height="13" uuid="84d9956b-b791-4d73-89a8-6e9b63139caa"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{dateto}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{datefrom}+" to "+$P{dateto}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="10" width="87" height="13" uuid="c3726609-1666-4df7-b5f4-3111c0ea9930"/>
+				<reportElement x="0" y="39" width="87" height="13" uuid="c3726609-1666-4df7-b5f4-3111c0ea9930"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[COMPANY	:]]></text>
+				<text><![CDATA[Company	:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="36" width="87" height="13" uuid="1d6ed56a-f463-44c7-8f8e-8cb48dc15fdb"/>
+				<reportElement x="0" y="52" width="87" height="13" uuid="3c20949e-b916-44ea-a2e4-94ca14849c46"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[TO		:]]></text>
+				<text><![CDATA[Date Range	:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="23" width="87" height="13" uuid="3c20949e-b916-44ea-a2e4-94ca14849c46"/>
-				<textElement>
-					<font isBold="true"/>
+				<reportElement x="0" y="6" width="555" height="19" uuid="dd0f6fe3-b96a-4853-a90f-98db501c3edf"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Cambria" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[FROM		:]]></text>
-			</staticText>
-			<line>
-				<reportElement x="0" y="51" width="555" height="1" uuid="6a6a59fd-7193-45fb-a777-847c48a2dde3"/>
-			</line>
-			<staticText>
-				<reportElement x="237" y="1" width="86" height="13" uuid="dd0f6fe3-b96a-4853-a90f-98db501c3edf"/>
 				<text><![CDATA[TRIAL BALANCE]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="15" splitType="Stretch">
-			<textField>
-				<reportElement x="0" y="0" width="60" height="14" uuid="8575c6a1-440d-4b27-abf1-73f51ad71bc2"/>
-				<textFieldExpression><![CDATA[$F{Date}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="60" y="0" width="56" height="14" uuid="b2f57e49-e1ea-4325-ae5e-0c52729e6bf6"/>
-				<textFieldExpression><![CDATA[$F{Reference}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="117" y="0" width="46" height="14" uuid="b6901f8a-970f-4733-bee6-4c3c508ea729"/>
-				<textFieldExpression><![CDATA[$F{Code}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="376" y="0" width="92" height="14" uuid="1856f7f4-d5cf-4e8f-8d93-dfc8366620af"/>
-				<textFieldExpression><![CDATA[$F{Debit}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="468" y="0" width="86" height="14" uuid="f022b846-bb83-4cef-8638-0d38e01b27f5"/>
-				<textFieldExpression><![CDATA[$F{Credit}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="164" y="0" width="212" height="14" uuid="526b77bc-399b-4dde-a187-dbeb86b91f46"/>
-				<textFieldExpression><![CDATA[$F{Account}]]></textFieldExpression>
-			</textField>
+			<line>
+				<reportElement x="0" y="-3" width="555" height="1" uuid="6a6a59fd-7193-45fb-a777-847c48a2dde3"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
@@ -226,9 +149,9 @@
 			<staticText>
 				<reportElement x="317" y="6" width="44" height="14" uuid="5aa62470-dff0-425e-a954-1820c6b9d5b4"/>
 				<textElement>
-					<font isBold="true"/>
+					<font isBold="false"/>
 				</textElement>
-				<text><![CDATA[TOTAL:]]></text>
+				<text><![CDATA[Balance:]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="0" width="555" height="1" uuid="ec2f5b39-e05d-472f-a6ed-2933cda06eef"/>
